--- a/CP4/fig2_3.ipynb
+++ b/CP4/fig2_3.ipynb
@@ -5,7 +5,7 @@
    "id": "1299d5bf-4205-4099-ada7-aa219039dca2",
    "metadata": {},
    "source": [
-    "Plot Fig. 2b,c,f,g,j,k"
+    "Plot Fig. 2f,g,j,k"
    ]
   },
   {
