--- a/CP4/fig3_2.ipynb
+++ b/CP4/fig3_2.ipynb
@@ -1,5 +1,13 @@
 {
  "cells": [
+{
+   "cell_type": "markdown",
+   "id": "b3689b71-ea5b-48d7-8468-c8fc791383ba",
+   "metadata": {},
+   "source": [
+    "Plot Fig. 3a,b"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
