--- a/CP4/fig3_2.ipynb
+++ b/CP4/fig3_2.ipynb
@@ -5,7 +5,7 @@
    "id": "b3689b71-ea5b-48d7-8468-c8fc791383ba",
    "metadata": {},
    "source": [
-    "Plot Fig. 3a,b"
+    "Plot Fig. 3c,d"
    ]
   },
   {
