--- a/CP4/fig4_1.ipynb
+++ b/CP4/fig4_1.ipynb
@@ -296,7 +296,7 @@
     "if var == 'q2':\n",
     "    rounder = 5\n",
     "else:\n",
-    "\trounder = 2\n",
+    "    rounder = 2\n",
     "\n",
     "xtlbs = np.arange(-200, 200+50, 50)\n",
     "xtcks = xtlbs / 4.4\n",
@@ -311,7 +311,6 @@
     "bounds = np.linspace(anomin, anomax, 11)\n",
     "norm = MidpointNormalize(vmin=anomin, vmax=anomax, midpoint=0)  # vmin=anomin, vmax=vmax\n",
     "\n",
-    "varstepano = 4\n",
     "anoscale = 0.2\n",
     "arrow_length_ano = 1\n",
     "\n",
